# Mrs_IArma

./: .dockerignore  .env.example  .gitignore  DEVELOPMENT.md  DOCUMENTATION.md  Dockerfile  HANDOFF.md  INTEGRATION.md  PROJECT_OVERVIEW.md  Project_Brief.docx  README.md  docker-compose.yml  pyproject.toml  review.html
agent_briefs/: 00_MISSION.md  01_RULES.md  02_OUTPUT_LOCATIONS.md  README.md
api/: config.py  main.py  middleware.py  routes.py
data/: audio_radio_index.npy  audio_radio_index_meta.jsonl  bxa_index.npy  bxa_index_meta.jsonl  creative_b2b_index.npy  creative_b2b_index_meta.jsonl  creative_bt_index.npy  creative_bt_index_meta.jsonl  creative_commerce_index.npy  creative_commerce_index_meta.jsonl  creative_data_index.npy  creative_data_index_meta.jsonl  creative_effectiveness_index.npy  creative_effectiveness_index_meta.jsonl  creative_strategy_index.npy  creative_strategy_index_meta.jsonl  design_index.npy  design_index_meta.jsonl  digital_craft_index.npy  digital_craft_index_meta.jsonl  direct_index.npy  direct_index_meta.jsonl  e2e_supercube_pr.json  e2e_supercube_pr_en.json  ent_gaming_index.npy  ent_gaming_index_meta.jsonl  ent_music_index.npy  ent_music_index_meta.jsonl  ent_sport_index.npy  ent_sport_index_meta.jsonl  entertainment_index.npy  entertainment_index_meta.jsonl  film_craft_index.npy  film_craft_index_meta.jsonl  film_index.npy  film_index_meta.jsonl  glass_index.npy  glass_index_meta.jsonl  health_index.npy  health_index_meta.jsonl  (+24 more)
frontend/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
mini_frontend/: app.js  index.html  style.css
pipeline/: __init__.py  audio_radio_criteria.py  bxa_criteria.py  category_registry.py  classifier.py  client.py  creative_b2b_criteria.py  creative_bt_criteria.py  creative_commerce_criteria.py  creative_data_criteria.py  creative_effectiveness_criteria.py  creative_strategy_criteria.py  design_criteria.py  embeddings.py  (+31 more)
(+77 files in other folders)
