[project]
name = "mrs-iarma"
version = "0.1.0"
description = "Mrs IArma — Cannes Lions prediction engine. Predicts tier (Grand Prix / Gold / Silver / Bronze / No Medal) from a board image + metadata."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary — Artefact 3000" }
authors = [
    { name = "Etienne Roure", email = "etienne.roure@artefact.com" },
]
keywords = ["cannes-lions", "advertising", "ai", "claude", "rag"]

dependencies = [
    # LLM (extraction + judge)
    "anthropic>=0.40.0",
    # Embeddings (RAG)
    "voyageai>=0.3",
    # Schema validation
    "pydantic>=2.6",
    # Image handling
    "pillow>=10.0",
    "pillow-avif-plugin>=1.4",
    # Vector ops
    "numpy>=1.26",
    # Env / config
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Dev scripts (extraction, calibration, doc generation). Not needed in prod.
dev = [
    "tqdm>=4.66",
    "python-docx>=1.1",
]
# FastAPI reference service. Not needed if the integrator builds their own service.
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "pydantic-settings>=2.6",
]
# Test suite.
test = [
    "pytest>=8.0",
    "httpx>=0.27",  # FastAPI TestClient
]

[project.urls]
Repository = "https://github.com/artefact3000/mrs-iarma"
Documentation = "https://github.com/artefact3000/mrs-iarma/blob/main/INTEGRATION.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# The Python package we ship is `pipeline/`. Data files (RAG index) are
# committed in `data/` and loaded by the package at runtime via relative paths.
packages = ["pipeline"]
artifacts = [
    "data/outdoor_index.npy",
    "data/outdoor_index_meta.jsonl",
    "data/outdoor_2024_with_rationale.jsonl",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
